complete order and pizza constructors

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
         <legend class="form-check-label" for="pizzaSize">Pizza Size: </legend>
         <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="pizzaSize" id="smallSize">
+          <input class="form-check-input" type="radio" name="pizzaSize" value="smallSize">
           <label class="form-check-label" for="smallSize">Small</label>
         </div>
         <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="pizzaSize" id="largeSize">
+          <input class="form-check-input" type="radio" name="pizzaSize" value="largeSize">
           <label class="form-check-label" for="largeSize">Large</label>
         </div>
 
@@ -39,7 +39,7 @@
           <input type="checkbox" name="pizzaToppings" value="greenPeppers"> Green peppers<br>
           <input type="checkbox" name="pizzaToppings" value="pineapple"> Pineapple<br>
           <input type="checkbox" name="pizzaToppings" value="spinach"> Spinach<br>
-          
+
 
           <button class="btn btn-danger" type="submit">Submit your order!</button>
         </form>
