update html form with draft card layout.

--- a/index.html
+++ b/index.html
@@ -54,13 +54,33 @@
           <input class="ml-3"type="checkbox" name="pizzaToppings" value="greenPeppers"> Green peppers<br>
           <input class="ml-3"type="checkbox" name="pizzaToppings" value="pineapple"> Pineapple<br>
           <input class="ml-3"type="checkbox" name="pizzaToppings" value="spinach"> Spinach<br>
+        </div>
 
-
-          <button class="btn btn-danger" type="submit">Submit your order!</button>
-        </form>
-
-
-      </div>
+        <button class="btn btn-danger" type="submit">Add your pizza!</button>
+      </form>
     </div>
-  </body>
-  </html>
+    <div class="confirmationSection">
+      <h4>Your order:</h4>
+      <div class="row">
+        <!-- EXAMPLE -->
+
+        <div class="card">
+          <div class="card-header bg-info">
+            Pizza name ...
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item bg-secondary">topping 1</li>
+            <li class="list-group-item bg-secondary">topping 2</li>
+            <li class="list-group-item bg-secondary">topping ...</li>
+          </ul>
+        </div>
+
+        <!-- EXAMPLE -->
+      </div>
+
+      <h4>Total: ...</h4>
+
+    </div>
+  </div>
+</body>
+</html>
