add js display pizza order function.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
     <div class="confirmationSection">
       <h4>Your order:</h4>
-      <div class="row">
+      <div class="row pizzaDisplay">
         <!-- EXAMPLE -->
 
         <div class="card">
