update card layout, add display of toppings for each pizza.

--- a/index.html
+++ b/index.html
@@ -61,21 +61,15 @@
     </div>
     <div class="confirmationSection">
       <h4>Your order:</h4>
-      <div class="row pizzaDisplay">
-        <!-- EXAMPLE -->
+      <div class="row">
+        <div class="col-lg-12">
 
-        <div class="card">
-          <div class="card-header bg-info">
-            Pizza name ...
+          <div class="card-columns pizzaDisplay">
+
+            <!-- PLACEHOLDER -->
           </div>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item bg-secondary">topping 1</li>
-            <li class="list-group-item bg-secondary">topping 2</li>
-            <li class="list-group-item bg-secondary">topping ...</li>
-          </ul>
         </div>
 
-        <!-- EXAMPLE -->
       </div>
 
       <h4>Total: ...</h4>
