add toppingList prototype.

--- a/index.html
+++ b/index.html
@@ -61,19 +61,10 @@
     </div>
     <div class="confirmationSection">
       <h4>Your order:</h4>
-      <div class="row">
-        <div class="col-lg-12">
-
-          <div class="card-columns pizzaDisplay">
-
+          <div class="row card-group pizzaDisplay">
             <!-- PLACEHOLDER -->
           </div>
-        </div>
-
-      </div>
-
       <h4>Total: ...</h4>
-
     </div>
   </div>
 </body>
