update js topping function.

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 
         <legend class="form-check-label" for="pizzaSize">Pizza Size: </legend>
         <div class="form-check form-check-inline">
-          <input class="form-check-input ml-3" type="radio" name="pizzaSize" value="smallSize">
-          <label class="form-check-label" for="smallSize">Small</label>
+          <input class="form-check-input ml-3" type="radio" name="pizzaSize" value="Small" checked>
+          <label class="form-check-label" for="Small">Small</label>
         </div>
         <div class="form-check form-check-inline">
-          <input class="form-check-input ml-3" type="radio" name="pizzaSize" value="largeSize">
-          <label class="form-check-label" for="largeSize">Large</label>
+          <input class="form-check-input ml-3" type="radio" name="pizzaSize" value="Large">
+          <label class="form-check-label" for="Large">Large</label>
         </div>
 
         <legend class="form-check-label" for="pizzaToppings">Select toppings: </legend>
