add total function and display.

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
   <div class="container">
-    <div class="jumbotron">
+    <!-- <div class="jumbotron"> -->
       <h1>Pizza is an Object, Inc.</h1>
-    </div>
+    <!-- </div> -->
     <div class="orderSection">
       <form id="orderForm">
-        <h4>Please place your order here:</h4>
+        <h5>Please place your order here:</h5>
 
         <div class="form-inline">
           <div class="form-group ml-3">
@@ -60,11 +60,11 @@
       </form>
     </div>
     <div class="confirmationSection">
-      <h4>Your order:</h4>
+      <h5>Your order:</h5>
           <div class="row card-group pizzaDisplay">
             <!-- PLACEHOLDER -->
           </div>
-      <h4>Total: ...</h4>
+      <h5>Total: $<span class="totalPrice"></span></h5>
     </div>
   </div>
 </body>
