update css backgrounds and cards. add name to ui

--- a/index.html
+++ b/index.html
@@ -56,15 +56,17 @@
           <input class="ml-3"type="checkbox" name="pizzaToppings" value="spinach"> Spinach<br>
         </div>
 
-        <button class="btn btn-danger" type="submit">Add your pizza!</button>
+        <button class="btn btn-danger" type="submit">Add a pizza!</button>
       </form>
     </div>
     <div class="confirmationSection">
-      <h5>Your order:</h5>
+      <h5><span class="orderName"></span>, here's the order we have so far:</h5>
           <div class="row card-group pizzaDisplay">
             <!-- PLACEHOLDER -->
           </div>
-      <h5>Total: $<span class="totalPrice"></span></h5>
+      <h5>Order total: $<span class="totalPrice"></span></h5>
+      <button class="btn btn-primary" type="button">Place your order!</button>
+
     </div>
   </div>
 </body>
